typesense/tests/derive/ui/duplicate_attribute.stderr
error: Attribute `facet` is duplicated
 --> tests/derive/ui/duplicate_attribute.rs:7:30
  |
7 |     #[typesense(facet, sort, facet)]
  |                              ^^^^^
